--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "http://randomquotemachine.io/",
+{ "homepage": "http://revenco-daniel.github.io/RandomQuoteMachine",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
